Migrating everything from static html project

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -8,3 +8,24 @@
 // -------------------------
 
 @icon-font-path:        "../vendor/bootstrap/fonts/";
+
+
+// Fonts & Typography
+@fa-font-path: "//netdna.bootstrapcdn.com/font-awesome/4.1.0/fonts";
+@headings-font-family: "BarbedorLT-Regular";
+@font-family-monospace: "Courier New",Menlo, Monaco, Consolas, monospace;
+@font-family-base: @font-family-monospace;
+
+// Navigation
+@nav-link-padding: 2px 8px;
+@nav-link-hover-bg: transparent;
+
+// Colors
+@link-color: #666;
+@hr-border: #666;
+
+// Carousel
+@carousel-control-color: #000;
+@carousel-control-width: 10%;
+@carousel-indicator-active-bg: #999;
+@carousel-indicator-border-color: #999;
