--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Roots Starter Theme
-Theme URI:          http://roots.io/starter-theme/
-Description:        Roots is a WordPress starter theme based on HTML5 Boilerplate & Bootstrap. <a href="https://github.com/roots/roots/contributors">Contribute on GitHub</a>
-Version:            7.0.0
-Author:             Roots
-Author URI:         http://roots.io/
+Theme Name:         Ato1Lab Theme
+Theme URI:          http://joaonetto.me
+Description:        Wordpress theme made to Ato1Lab
+Version:            1.0.0
+Author:             João Netto
+Author URI:         http://joaonetto.me
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
