--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -62,6 +62,7 @@
     padding-top: 20px;
 
     h2 {
+        text-transform: uppercase;
         font-weight: bold;
         font-size: 24px;
     }
@@ -72,7 +73,7 @@
     }
 
     // Pages styling
-    &.profiles {
+    &.about {
         hr {
             margin-top: 30px;
         }
