Making map work

--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -14,8 +14,9 @@
     padding-top: 40px;
 
     nav.language-selector {
-        margin-left: 25px;
+        margin-left: -5px;
         font-size: 12px;
+        text-transform: downcase;
 
         ul {
           list-style: none;
