Changing class names to work with i18n

--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -79,7 +79,7 @@
     }
 
     // Pages styling
-    &.about {
+    &.about, &.sobre {
         hr {
             margin-top: 30px;
         }
@@ -109,7 +109,7 @@
         }
     }
 
-    &.contact {
+    &.contact, &.contato {
         address {
             margin: 0 auto;
         }
@@ -127,7 +127,7 @@
         }
     }
 
-    &.support {
+    &.support, &.suporte {
         hr {
             margin-top: 30px;
         }
