--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -5,109 +5,132 @@
 .main { }
 // Fix container at left
 .container {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 // Navigation bar
 .sidebar {
-    text-align: left;
-    padding-top: 40px;
+  text-align: left;
+  padding-top: 40px;
 
-    nav.language-selector {
-        margin-left: -5px;
-        font-size: 12px;
-        text-transform: downcase;
+  nav.language-selector {
+    margin-left: -5px;
+    font-size: 12px;
+    text-transform: downcase;
 
-        ul {
-          list-style: none;
-          li { display: inline-block; }
-          li.current-lang {
-            a { font-weight: bold; }
-          }
+    ul {
+      list-style: none;
+      li {
+        display: inline-block;
+
+        &.current-lang {
+          a { font-weight: bold; }
         }
+      }
     }
+  }
 
-    // Default logo replacement
-    .main-logo {
-        a {
-            .text-hide();
-            width: 182px;
-            height: 173px;
-            background: url("../img/main-logo.png") no-repeat;
-            display: block;
-        }
+  // Default logo replacement
+  .main-logo {
+    a {
+      .text-hide();
+      width: 182px;
+      height: 173px;
+      background: url("../img/main-logo.png") no-repeat;
+      display: block;
     }
+  }
 
-    ul.social {
-        margin-top: 20px;
-        li {
-            display: inline-block;
-            font-size: 24px;
+  ul.social {
+    margin-top: 20px;
+    li {
+      display: inline-block;
+      font-size: 24px;
 
-            &:last-child {
-                margin-left: -10px;
-            }
-        }
+      &:last-child {
+        margin-left: -10px;
+      }
     }
+  }
 
-    .main-menu, ul.works, ul.social {
-        padding-left: 38px;
-    }
+  .main-menu, ul.works, ul.social {
+    padding-left: 38px;
+  }
 
-    h3 {
-        margin-top: 100px;
-        margin-left: 47px;
-        margin-bottom: -5px;
-        font-size: 22px;
-        font-weight: bold;
-    }
+  h3 {
+    margin-top: 100px;
+    margin-left: 47px;
+    margin-bottom: -5px;
+    font-size: 22px;
+    font-weight: bold;
+  }
 }
 
 // Main content
-.content {
-    padding-top: 20px;
+.page-id-19 {
+  .content {
+    img {
+      .img-responsive();
+    }
+  }
+}
+
+.single-works {
+  .content {
+    padding-top: 40px;
 
     h2 {
+        font-size: 24px;
         text-transform: uppercase;
         font-weight: bold;
-        font-size: 24px;
+        margin: 0 auto;
+        a {
+          color: #333;
+        }
     }
 
-    // Cover Picture Layout
-    &.index2 {
-        padding-top: 40px;
-    }
-
-    // Pages styling
-    &.about, &.sobre {
+    .portfolio-info {
         hr {
-            margin-top: 30px;
-        }
-
-        h3 {
-            font-family: @font-family-monospace;
-            font-size: 16px;
-            text-transform: uppercase;
-            font-weight: bold;
+            margin-top: 170px;
         }
     }
+  }
+}
 
-    &.portfolio-single {
-        padding-top: 40px;
-
-        h2 {
-            font-size: 24px;
-            text-transform: uppercase;
-            font-weight: bold;
-            margin: 0 auto;
-        }
-
-        .portfolio-info {
-            hr {
-                margin-top: 170px;
-            }
-        }
+// Pages styling
+.about, .sobre {
+  .content {
+    hr {
+        margin-top: 30px;
     }
+
+    h3 {
+        font-family: @font-family-monospace;
+        font-size: 16px;
+        text-transform: uppercase;
+        font-weight: bold;
+    }
+  }
+}
+
+.content {
+  padding-top: 20px;
+
+  h2 {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 24px;
+    a {
+      color: #333;
+    }
+  }
+
+  // Cover Picture Layout
+  &.index2 {
+      padding-top: 40px;
+  }
+
+
 
     &.contact, &.contato {
         address {
@@ -133,75 +156,4 @@
         }
     }
 
-}
-
-// Carousel
-.carousel {
-    padding-top: 10px;
-}
-
-// Carousel Navigation
-.carousel-control {
-    padding-top: 10px;
-
-    &.left, &.right {
-        background: none;
-
-        .arrow-left {
-            background: url('../img/arrow-left.png');
-            width: 12px;
-            height: 63px;
-            position: absolute;
-            top: 220px;
-            z-index: 5;
-            display: inline-block;
-            left: 50%;
-            margin-left: -10px;
-        }
-
-        .arrow-right {
-            background: url('../img/arrow-right.png');
-            width: 12px;
-            height: 63px;
-            position: absolute;
-            top: 220px;
-            z-index: 5;
-            display: inline-block;
-            right: 50%;
-            margin-right: -10px;
-        }
-    }
-}
-
-.carousel-indicators {
-    bottom: -50px;
-}
-
-.carousel-inner .item {
-    height: 480px;
-}
-
-.carousel-inner .item img {
-    margin: 0 auto;
-    max-width: 700px;
-    max-height: 480px;
-}
-
-.carousel-inner > .item > a > img {
-    max-width: 700px;
-}
-
-.carousel-inner .item iframe {
-    margin: 30px auto 20px;
-
-    width: 700px;
-    height: 400px;
-}
-
-.carousel-inner .item .text-carousel {
-    margin: 30px 90px;
-}
-
-.carousel-inner, .carousel-inner .item, .carousel-inner .item img {
-    max-height: 480px;
 }
