Fixing support page

--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -91,7 +91,7 @@
 
     .portfolio-info {
         hr {
-            margin-top: 170px;
+            margin-top: 20px;
         }
     }
   }
@@ -157,3 +157,8 @@
     }
 
 }
+
+.content.support .list-unstyled li { height: 170px; line-height: 170px; }
+
+
+h1, h2, h3, h4, h5, h6 { text-transform: uppercase; }
