--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -158,7 +158,8 @@
 
 }
 
-.content.support .list-unstyled li { height: 170px; line-height: 170px; }
+.support-images a { height: 170px; line-height: 170px; }
 
 
+h1, h2, h3, h4, h5, h6 { text-transform: uppercase; }
 h1, h2, h3, h4, h5, h6 { text-transform: uppercase; }
