--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -80,36 +80,67 @@
     padding-top: 40px;
 
     h2 {
-        font-size: 24px;
-        text-transform: uppercase;
-        font-weight: bold;
-        margin: 0 auto;
-        a {
-          color: #333;
-        }
+      font-size: 24px;
+      text-transform: uppercase;
+      font-weight: bold;
+      margin: 0 auto;
+      a {
+        color: #333;
+      }
+    }
+
+    .header-line {
+      margin-top: 35px !important;
+    }
+
+    .arve-wrapper {
+      margin: 35px auto 45px;
     }
 
     .portfolio-info {
-        hr {
-            margin-top: 20px;
+
+      .portfolio-images {
+        margin-top: 45px;
+
+        a {
+          display: block;
+          height: 145px;
+          text-align: center;
+          margin-bottom: 45px;
+
+          img {
+            width: auto;
+            height: auto;
+
+            max-width: 100%;
+            max-height: 100%;
+
+            margin: 0 auto;
+          }
         }
+      }
+
+      .post-text {
+        margin-top: 25px;
+      }
+
+      hr {
+        margin-top: 20px;
+      }
     }
   }
 }
 
 // Pages styling
-.about, .sobre {
-  .content {
-    hr {
-        margin-top: 30px;
-    }
+.content.about, .content.sobre {
+  hr {
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
 
-    h3 {
-        font-family: @font-family-monospace;
-        font-size: 16px;
-        text-transform: uppercase;
-        font-weight: bold;
-    }
+  h3 {
+    font-size: 16px !important;
+    text-transform: uppercase;
   }
 }
 
@@ -163,3 +194,11 @@
 
 h1, h2, h3, h4, h5, h6 { text-transform: uppercase; }
 h1, h2, h3, h4, h5, h6 { text-transform: uppercase; }
+
+.lb-outerContainer {
+  background-color: transparent !important;
+}
+
+.lb-details {
+  display: none !important;
+}
