--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -29,3 +29,5 @@
 @carousel-control-width: 10%;
 @carousel-indicator-active-bg: #999;
 @carousel-indicator-border-color: #999;
+
+@font-size-base: 12px;
