Changing logo size

--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -14,7 +14,7 @@
   padding-top: 40px;
 
   nav.language-selector {
-    margin-left: -5px;
+    margin-left: -14px;
     font-size: 12px;
     text-transform: downcase;
 
@@ -37,7 +37,9 @@
       width: 182px;
       height: 173px;
       background: url("../img/main-logo.png") no-repeat;
+      background-size: 80%;
       display: block;
+      margin-left: 10px;
     }
   }
 
